# gitinspectorgui

./: .clineignore  .gitignore  .gitlab-ci.yml  BLAME_TABS_IMPLEMENTATION_PLAN.md  DEVELOPMENT_MODE.md  GROUP_PAGES_SETUP.md  HTTP_CLIENT_INTEGRATION_SUMMARY.md  IMPLEMENTATION_PLAN.md  LEGACY_INTEGRATION_PLAN.md  LICENSE.md  MIGRATION_SUMMARY.md  PROOF_OF_CONCEPT_SUMMARY.md  README.md  broken-links-report.md  demo-test.html  dev-mode.sh  group-pages-gitlab-ci.yml  index.html  mkdocs.yml  package-lock.json  package.json  pnpm-lock.yaml  pyo3.md  pyproject.toml  runtime-tests.md  setup-dev.sh  test_tauri_http.py  vite.config.ts
.ci/: app.yml  base.yml  docs.yml
.clinerules/: .completion-summaries.md  .macos-no-shell-operators.md  commit-permission.md  conventional-commits.md
.github/workflows/: docs.yml
debug_pyo3/: README.md  SOLUTION_SUMMARY.md  test_gigui_import.rs  verify_env.py
debug_pyo3/gigui_test/: Cargo.toml
debug_pyo3/minimal_tests/: Cargo.toml
debug_pyo3/minimal_tests/src/: main.rs
docs/: ARCHITECTURE_PLAN_SUMMARY.md  DOCUMENTATION_CLEANUP_PLAN.md  DOCUMENTATION_IMPROVEMENTS_COMPLETED.md  DOCUMENTATION_IMPROVEMENT_PLAN.md  DOCUMENTATION_RESTRUCTURE_COMPLETED.md  DOCUMENTATION_RESTRUCTURE_PLAN.md  NPM_TO_PNPM_MIGRATION_GUIDE.md  PHASE4_LEGACY_ENGINE_WRAPPER.md  README.md  ROLLBACK_COMPLETION_SUMMARY.md  cline_terminal_diagnostics_macos.md  evaluation.md  index.md  technology-primer.md
docs/ai-tools/: cline-guide.md  cline-usage-guidelines.md  index.md  overview.md  roo-code-guide.md
docs/ai-tools-old/: ENHANCED-AI-TOOLS-DOCUMENTATION.md
docs/api/: HTTP_API_REFERENCE.md  api.md  error-handling.md  examples.md  reference.md
docs/architecture/: ARCHITECTURE_DIAGRAMS.md  HTTP_API_IMPLEMENTATION_PLAN.md  LEGACY_INTEGRATION_PLAN.md  MKDOCS_CONVERSION_PLAN.md  design-background-info.md  design-decisions.md  development_with_docs_architecture.md  legacy-integration.md  nodejs-development-rust-production.md  overview.md  pyo3-integration.md  redesign.md  technology-stack.md
docs/archive/: HTTP_API_IMPLEMENTATION_PLAN_ORIGINAL.md
docs/deployment/: PRODUCTION_DEPLOYMENT_GUIDE.md
docs/development/: API_SIDECAR.md  blame-tabs-implementation.md  build-process.md  cli-development-guide.md  cline-command-execution-analysis.md  cline-vscode-terminal-diagnostics.md  demo-based-documentation-gui-development.md  design-system-integration.md  development-architecture.md  development-commands.md  development-mode.md  development-workflow.md  enhanced-settings.md  environment-setup.md  javascript-package-management.md  modes-comparison.md  package-management-fundamentals.md  package-management-overview.md  package-management-pnpm.md  package-management.md  pip-to-uv-migration.md  publishing.md  python-focused-development.md  python-management-uv.md  python-package-management.md  troubleshooting.md
docs/development/advanced/: demo-based-development.md  design-system-integration.md
docs/development/diagnostics/: TIMEOUT_ANALYSIS_SUMMARY.md  TIMEOUT_DEBUGGING_PLAN.md  TIMEOUT_IMPLEMENTATION_PLAN.md  cline_python_sidecar_creation.md  cline_terminal_diagnostics_macos.md
docs/getting-started/: 01-prerequisites.md  02-installation.md  03-quick-start.md  04-first-analysis.md  cli-guide.md  cli-standalone.md  cli-usage.md  first-analysis.md  installation.md  quick-start.md
docs/implementation/: HTTP_API_IMPLEMENTATION_SUMMARY.md  HTTP_API_STATUS_SUMMARY.md  HTTP_CLIENT_INTEGRATION_DETAILS.md  IMPLEMENTATION_PLAN.md  PHASE3_COMPLETION_SUMMARY.md  PHASE4_COMPLETION_SUMMARY.md
docs/operations/: deployment.md  documentation-deployment.md  maintenance.md  monitoring.md  server-management.md
docs/operations/rollback/: DETAILED_ROLLBACK_SPECIFICATION.md  ROLLBACK_COMPLETION_SUMMARY.md  ROLLBACK_PLAN.md
docs/user-docs/: cli.md  develop.md  examples.md  faq.md  gui.md  index.md  install.md  issues.md  known-issues.md  output.md  overview.md  quick-start.md  supported.md
docs/user-pandocs/: cli.md  develop.md  examples.md  faq.md  index.md  install.md  issues.md  supported.md
python/: README-API-SIDECAR.md  RESTURCTURE.md  api-sidecar.spec  api.py  build-api-sidecar.sh  build-cli-app.sh  cli-app.spec  dev_api.py  gitinspectorcli_main.py  requirements-api-sidecar.txt  requirements.txt  setup-api-sidecar.sh  test.py  test_enhanced_settings.py  test_legacy_engine.py  test_legacy_integration.py  test_timeout_diagnosis.py
python/gigui/: __init__.py  api.py  api_types.py  cli.py  common.py  data.py  http_server.py  legacy_engine.py  performance_monitor.py  person_data.py  repo_base.py  repo_blame.py  repo_data.py  start_server.py  typedefs.py  utils.py
python/gigui/analysis/: __init__.py
python/gigui/api/: __init__.py  http_server.py  main.py  start_server.py  types.py
python/gigui/cli/: __init__.py  __main__.py  interface.py
python/gigui/core/: __init__.py  legacy_engine.py  orchestrator.py  (+3 more)
python/tests/: __init__.py  test_enhanced_settings.py  test_legacy_integration.py  test_repo_data.py  test_utils.py
python/tools/: analyze_blame_data.py  build-api-sidecar.sh  run_diagnosis.py  setup-api-sidecar.sh
scripts/: README.md  build-all-platforms.sh  build-cli-all-platforms.sh  build-gui-all-platforms.sh  build-utils.sh  dev-mode.sh  prepare-release.sh  server-manager.sh  setup-dev.sh  switch-ci.sh  test-docs-build.sh  test-release.sh  update-version.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.dev.json  tauri.conf.json  tauri.conf.json.backup
src-tauri/capabilities/: default.json
src-tauri/python/: main.py
src-tauri/src/: commands.rs  main.rs
src-tauri/src-python/: main.py
src/components/: AdvancedResultsTables.tsx  BlameFileTabsInterface.tsx  BlameHistoryNavigator.tsx  DemoBanner.tsx  ExecuteButton.tsx  InteractiveResultsTables.tsx  Phase3ResultsInterface.tsx  ResultsTables.tsx  ServerStatus.tsx  SettingsForm.tsx  SettingsFormTabs.tsx
src/data/: sampleData.ts
src/hooks/: useServerStatus.ts
src/lib/: api.ts  demo.ts  utils.ts
src/stores/: resultsStore.ts  settingsStore.ts
src/types/: results.ts  settings.ts
(+10 files in other folders)
