[project]
name = "gitinspectorgui"
version = "0.1.0"
description = "A modern desktop application for git repository analysis"
authors = [{ name = "Bert van Beek", email = "d.a.v.beek@tue.nl" }]
license = { text = "MIT" }
readme = { file = "README.md", content-type = "text/markdown" }
keywords = [
    "git",
    "repository",
    "repositories",
    "analyzer",
    "analysis",
    "statistics",
    "blame",
    "cli",
    "gui",
    "tauri",
    "react",
    "typescript"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "beautifulsoup4 >= 4.12.3",
    "colorlog >= 6.9",
    "gitpython>=3.1.43",
    "jinja2 >= 3.1.4",
    "jsonschema >= 4.23",
    "platformdirs >= 4.3.6",
    "requests >= 2.32.3",
    "werkzeug >= 3.1.3",
    "xlsxwriter >= 3.2",
    "fastapi >= 0.115",
    "uvicorn[standard]>=0.24.0",
    "httpx>=0.25.0",
]

[project.urls]
homepage = "https://gitlab.com/edu-boost/gitinspectorgui"
repository = "https://gitlab.com/edu-boost/gitinspectorgui"

[project.scripts]
gigui = "gigui.cli:main"
gitinspectorgui = "gigui.cli:main"

[dependency-groups]
dev = [
    "pre-commit >= 4.0.1",
    "pyinstaller>=6.11.1",
    "pytest>=8.3.5",
    "ruff >= 0.9",
]

[tool.hatch.build.targets.wheel]
packages = ["python/gigui"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "YTT", "S", "BLE", "FBT", "B", "A", "COM", "C4", "DTZ", "T10", "EM", "EXE", "FA", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SLOT", "SIM", "TID", "TCH", "INT", "ARG", "PTH", "TD", "FIX", "ERA", "PD", "PGH", "PL", "TRY", "FLY", "NPY", "AIR", "PERF", "FURB", "LOG", "RUF"]
ignore = ["E501", "COM812", "ISC001"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
