[project]
name = "gitinspectorgui"
version = "0.5.0"
description = "A modern desktop application for git repository analysis"
authors = [{ name = "Bert van Beek", email = "d.a.v.beek@tue.nl" }]
license = { text = "MIT" }
readme = { file = "README.md", content-type = "text/markdown" }
keywords = [
    "git",
    "repository",
    "repositories",
    "analyzer",
    "analysis",
    "statistics",
    "blame",
    "cli",
    "gui",
    "tauri",
    "react",
    "typescript",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi >= 0.115.12",
    "gitpython>=3.1.44",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.14",
    "mkdocs-mermaid2-plugin>=1.2.1",
    "psutil >= 7.0.0",
    "requests >= 2.32.4",
    "uvicorn[standard]>=0.34.3",
]

[project.urls]
homepage = "https://gitlab.com/edu-boost/gitinspectorgui"
repository = "https://gitlab.com/edu-boost/gitinspectorgui"

[project.scripts]
gigui = "gigui.cli:main"
gitinspectorgui = "gigui.cli:main"

[dependency-groups]
dev = ["pyinstaller>=6.14.1", "pytest>=8.4.0", "ruff >= 0.11.13"]

[tool.hatch.build.targets.wheel]
packages = ["python/gigui"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "N",
    "UP",
    "YTT",
    "S",
    "BLE",
    "FBT",
    "B",
    "A",
    "COM",
    "C4",
    "DTZ",
    "T10",
    "EM",
    "EXE",
    "FA",
    "ISC",
    "ICN",
    "G",
    "INP",
    "PIE",
    "T20",
    "PYI",
    "PT",
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SLOT",
    "SIM",
    "TID",
    "TCH",
    "INT",
    "ARG",
    "PTH",
    "TD",
    "FIX",
    "ERA",
    "PD",
    "PGH",
    "PL",
    "TRY",
    "FLY",
    "NPY",
    "AIR",
    "PERF",
    "FURB",
    "LOG",
    "RUF",
]
ignore = ["E501", "COM812", "ISC001"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
