[project]
name = "gitinspectorgui"
version = "0.5.0"
description = "A modern desktop application for git repository analysis"
authors = [{ name = "Bert van Beek", email = "d.a.v.beek@tue.nl" }]
license = { text = "MIT" }
readme = { file = "README.md", content-type = "text/markdown" }
keywords = [
    "git",
    "repository",
    "repositories",
    "analyzer",
    "analysis",
    "statistics",
    "blame",
    "cli",
    "gui",
    "tauri",
    "react",
    "typescript",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.13,<3.14"
dependencies = [
    "gitpython>=3.1.44",
    "psutil >= 7.0.0",
]

[project.urls]
homepage = "https://github.com/boost-edu-tools/gitinspectorgui"
repository = "https://github.com/boost-edu-tools/gitinspectorgui"

[project.scripts]
gigui = "gigui.cli:main"
gitinspectorgui = "gigui.cli:main"

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.14",
    "mkdocs-mermaid2-plugin>=1.2.1",
    "pyinstaller>=6.14.1",
    "pytest>=8.4.0",
    "ruff >= 0.11.13",
]

[tool.hatch.build.targets.wheel]
packages = ["python/gigui"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "E501",   # Line too long (handled by formatter)
    "COM812", # Trailing comma missing (conflicts with formatter)
    "COM819", # Trailing comma prohibited (conflicts with formatter)
    "ISC001", # Single line implicit string concat (conflicts with formatter)
    "Q",      # Quote style (do not care about this, formatter produces correct quotes)
    "D203",   # incorrect-blank-line-before-class (incompatible with D211)
    "D213",   # multi-line-summary-second-line (incompatible with D212)
    # Add any other rules you want to ignore
]
