[package]
name = "gitinspectorgui"
version = "0.1.0"
description = "A modern desktop application for git repository analysis"
authors = ["Bert van Beek <d.a.v.beek@tue.nl>"]
license = "MIT"
repository = "https://github.com/davbeek/gitinspectorgui"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "path-all", "fs-rename-file", "dialog-open", "fs-remove-dir", "fs-read-file", "fs-read-dir", "fs-exists", "fs-create-dir", "shell-sidecar", "os-all", "dialog-save", "fs-copy-file", "fs-remove-file", "fs-write-file", "shell-open", "shell-execute"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
